[package]
name = "serialize_with_bson"
version = "0.1.0"
edition = "2021"
authors = ["wandercn<wander@ffactory.org>"]
description = "Alibaba Cloud SDK for Rust"
homepage = "https://github.com/wandercn/serialize_with_bson"
repository = "https://github.com/wandercn/serialize_with_bson"
keywords = ["serialize_with","bson","bson_help","time_formart"]
categories= ["api-bindings","accessibility","development-tools","compilers"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bson = { version = "2.9.0" }  
gostd_time = "1.0"
serde = { version = "1.0", features = ["derive"] }
[dev-dependencies]
serde_json ="1.0.0"