[package]
name = "serialize_with_bson"
version = "0.1.0"
edition = "2021"
authors = ["wandercn<wander@ffactory.org>"]
description = "Alibaba Cloud SDK for Rust"
homepage = "https://github.com/wandercn/serialize_with_bson"
repository = "https://github.com/wandercn/serialize_with_bson"
keywords = ["serialize-with","bson","bson-help","time-formart"]
categories= ["api-bindings","accessibility","development-tools","compilers"]


[dependencies]
bson = { version = "2.9.0" }  
gostd_time = "1.0"
serde = { version = "1.0", features = ["derive"] }
[dev-dependencies]
serde_json ="1.0.0"