[package]
name = "serialize_with_bson"
license = "MIT"
version = "0.1.0"
edition = "2021"
authors = ["wandercn<wander@ffactory.org>"]
description = "serialize with for bson DateTime"
homepage = "https://github.com/wandercn/serialize_with_bson"
repository = "https://github.com/wandercn/serialize_with_bson"
keywords = ["serialize","bson","help","timeformart"]
categories= ["api-bindings","accessibility","development-tools","compilers"]


[dependencies]
bson = { version = "2.9.0" }  
gostd_time = "1.0"
serde = { version = "1.0", features = ["derive"] }
[dev-dependencies]
serde_json ="1.0.0"